--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
-OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+OPENAI_API_KEY=sk-proj-RxrIpHx5mUyJcKqklUkNT3BlbkFJFAFBFiL6s5mpv33mCrha
+DATA_PATH=..\data\data_cleaned.csv
+
+APP_PORT=5000
+
+TZ=America/Los_Angeles
+
+# PostgreSQL Configuration
+POSTGRES_HOST=postgres
+POSTGRES_DB=tek_buddy_db
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_PORT=5433
